--- a/MiddleEarthProject Beta/localisation/_minor_titles.csv
+++ b/MiddleEarthProject Beta/localisation/_minor_titles.csv
@@ -34,3 +34,5 @@ title_captainaxebearers;Captain of the Axe-Bearers;Capitaine des Porteurs d'Hach
 title_wardenrammasechor;Warden of Rammas Echor;Protecteur de Rammas Echor;;;Guardiano di Rammas Echor;x
 title_co_ruler;Co-Ruler of Gondor;Co-Régent du Gondor;;;Coreggente;x
 title_co_ruler_desc;This character shares the Rules of Gondor with one of his peers. Together, they direct the destiny of the Southern Kingdom.;Ce personnage partage le pouvoir du Gondor avec l'un de ses pairs. Ensemble, ils dirigent la destinée du Royaume du Sud.;;;;x
+title_adventurer;Adventurer;;;;;;;;;;;;;x
+title_adventurer_desc;Adventurers are brave souls travelling the land in search of fame, glory, and always seeking to hone their skills. Many die young, but those that survive often end up being immortalised in song if they become legends in their own time.;;;;;;;;;;;;;x
