--- a/MiddleEarthProject Beta/localisation/Decisions.csv
+++ b/MiddleEarthProject Beta/localisation/Decisions.csv
@@ -49,3 +49,7 @@ call_assembly_dwarves;Assemble the Seven Kingdoms;Inviter les Rois des Nains à u
 call_assembly_dwarves_desc;Call all Dwarven Kings to a Council Assembly in Erebor.;Inviter les Rois des Nains à une Assemblée;;;x
 erebor_craft_decision;Mine or Craft in Erebor;Miner ou Fabriquer des objets en Erebor;;;x
 erebor_craft_decision_desc;Mine for materials or craft an item.;Miner ou Fabriquer des objets en Erebor;;;x
+open_adventuring_menu;Open Adventuring Menu;Miner ou Fabriquer des objets en Erebor;;;x
+open_adventuring_menu_desc;Here you can begin or end periods of adventuring and learn how to make your children go adventuring.;Miner ou Fabriquer des objets en Erebor;;;x
+
+
